# healpix-geo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pixi.toml  plot-cell-areas.ipynb  polygon-areas.ipynb  pyproject.toml  tmp_test_notebook.ipynb
.github/: release.yml
.github/workflows/: js-bundle.yml  python-ci.yml  rust-ci.yml  wasm.yml  wheels.yml
ci/package_check/: check-build.sh  main.py
ci/rattler-recipe/: prepare_recipe.py  recipe_template.yaml  test_healpix_geo.py
ci/requirements/: docs.yaml  environment-rust.yaml  environment.yaml
docs/: .gitignore  api-hidden.rst  api.rst  conf.py  create_environment.py  index.md  index.rst  installation.md  reference-system.md  terminology.md
docs/api/: nested.rst  ring.rst  zuniq.rst
docs/examples/: index.md
docs/healpix/: generate_table.py  index.md  levels.md
docs/scripts/: conversions.py  generate_healpix_levels_table.py  generate_latitude_diff_table.py  generate_latitude_graphic.py  script_utils.py
docs/tutorials/: coordinate_conversion.md  coverage_queries.md  ellipsoid_basics.md  index.md  performance_optimization.md  quickstart.md
docs/user-guide/: concepts.md  coordinates_systems.md  hierarchical_indexing.md  index.md
js/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
js/scripts/: build.sh
js/src/: coordinates.rs  ellipsoid.rs  geometry.rs  lib.rs  nested.rs  ring.rs  zuniq.rs
js/tests/: ellipsoid.test.ts  nested.test.ts  ring.test.ts  zuniq.test.ts
notebooks/: area_stretch_sphere_to_ellipsoid.ipynb
python/healpix-geo/: Cargo.toml  pixi.toml  pyproject.toml
python/healpix-geo/docs/: .gitignore  api-hidden.rst  api.rst  conf.py  create_environment.py  environment.template.yml  index.md  installation.md  terminology.md
python/healpix-geo/docs/api/: auto.rst  nested.rst  ring.rst  zuniq.rst
python/healpix-geo/docs/healpix/: ellipsoidal-extension.md  index.md  levels.md
python/healpix-geo/docs/tutorials/: ellipsoid_basics.md  performance_optimization.md  quickstart.md  working_with_moc.md
python/healpix-geo/docs/user-guide/: coverage_queries.md  ellipsoids.md  index.md  performance.md
python/healpix-geo/python/healpix_geo/: __init__.py  auto.py  nested.py  ring.py  slices.py  zuniq.py
python/healpix-geo/python/healpix_geo/tests/: test_auto.py  test_bilinear_interpolation.py  test_conversion.py  test_coverage.py  test_index.py  test_inference.py  test_neighbours.py  test_utils.py
python/healpix-geo/src/: ellipsoid.rs  execution.rs  geometry.rs  index.rs  lib.rs  slice_objects.rs  traits.rs
python/healpix-geo/src/indexing_schemes/: depth.rs
python/healpix-geo/src/indexing_schemes/nested/: coordinates.rs  coverage.rs  hierarchy.rs  mod.rs  sets.rs
python/healpix-geo/src/indexing_schemes/ring/: coordinates.rs  coverage.rs  hierarchy.rs  mod.rs
python/healpix-geo/src/indexing_schemes/zuniq/: conversion.rs  coordinates.rs  coverage.rs  hierarchy.rs  mod.rs
python/healpix_geo/: __init__.py  auto.py  nested.py  ring.py  typing.py  utils.py  zuniq.py
python/healpix_geo/tests/: test_auto.py  test_index.py  test_neighbours.py  test_select.py  test_sets.py
python/tests/: test_all.py
rust/healpix-geo-core/: Cargo.toml
rust/healpix-geo-core/src/: ellipsoid.rs  geometry.rs  lib.rs
rust/healpix-geo-core/src/index/: geometry.rs  indexers.rs  indexing.rs  mod.rs  ops.rs  region.rs  set.rs
rust/healpix-geo-core/src/scalar/: geometry.rs  mod.rs
rust/healpix-geo-core/src/scalar/nested/: conversion.rs  coordinates.rs  coverage.rs  hierarchy.rs
rust/healpix-geo-core/src/scalar/ring/: conversion.rs  coordinates.rs  coverage.rs  hierarchy.rs
rust/healpix-geo-core/src/scalar/zuniq/: conversion.rs  coordinates.rs  coverage.rs  hierarchy.rs  mod.rs
rust/healpix-geo-core/src/vectorized/: depth.rs  execution.rs  geometry.rs  mod.rs
rust/healpix-geo-core/src/vectorized/nested/: coordinates.rs  coverage.rs  distances.rs  hierarchy.rs
rust/healpix-geo-core/src/vectorized/ring/: coordinates.rs  coverage.rs  distances.rs  hierarchy.rs  mod.rs
rust/healpix-geo-core/src/vectorized/zuniq/: conversion.rs  coordinates.rs  coverage.rs  hierarchy.rs
src/: ellipsoid.rs  execution.rs  geometry.rs  hierarchy.rs  index.rs  lib.rs  slice_objects.rs
src/indexing_schemes/: depth.rs  mod.rs
src/indexing_schemes/nested/: coordinates.rs  coverage.rs  hierarchy.rs  mod.rs  sets.rs
src/indexing_schemes/ring/: coordinates.rs  hierarchy.rs
src/indexing_schemes/zuniq/: conversion.rs  coordinates.rs  hierarchy.rs  mod.rs
