[workspace]
members = [
  "rust/healpix-geo-core",
  "python/healpix-geo",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Justus Magin <keewis@posteo.de>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/EOPF-DGGS/healpix-geo"
categories = ["science::geo"]

[workspace.dependencies]
cdshealpix = { git = "https://github.com/cds-astro/cds-healpix-rust.git", rev = "0c76809be71e248ed137b9d68f10746d0418d413" }
moc = "0.19.1"
numpy = "0.27.1"
pyo3 = "0.27.2"
rayon = "1.11.0"
geodesy = "0.14.0"
itertools = "0.14.0"
healpix-geo-core = { path = "rust/healpix-geo-core" }
