[workspace]
members = [
  "rust/healpix-geo-core",
  "python/healpix-geo",
  "js",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["Justus Magin <keewis@posteo.de>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/GRID4EARTH/healpix-geo"
categories = ["science::geo"]

[workspace.dependencies]
cdshealpix = { git = "https://github.com/cds-astro/cds-healpix-rust.git", rev = "d9d017cda85a097b65d200e3c4cccefc54665915" }
moc = "0.19.2"
rayon = "1.12.0"
geodesy = "0.15.0"
itertools = "0.15.0"
healpix-geo-core = { path = "rust/healpix-geo-core" }
