[package]
name = "healpix-geo-wasm"
version = "0.1.3"
authors = ["Justus Magin <keewis@posteo.de>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/GRID4EARTH/healpix-geo"
categories = ["wasm", "science::geo"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.123"
healpix-geo-core = { workspace = true }
cdshealpix = { workspace = true }
geodesy = { workspace = true }
uuid = { version = "1.23.3", features = ["rng-getrandom"] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"
