[package]
name = "healpix-geo-wasm"
version = "0.2.1"
authors = ["Justus Magin <keewis@posteo.de>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/GRID4EARTH/healpix-geo"
categories = ["wasm", "science::geo"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.123"
healpix-geo-core = { workspace = true }
cdshealpix = { workspace = true }
geodesy = { workspace = true }
# `geodesy` pulls in `uuid` (with `rng`/`v4`), which hard-errors on
# `wasm32-unknown-unknown` unless a randomness backend is selected. These two
# dependencies (`uuid` and `getrandom`) exist solely to enable that backend for
# the wasm build; neither is used directly. Do not remove them.
uuid = { version = "1.23.3", features = ["rng-getrandom"] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"
serde = "1.0.228"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
serde_json = "1.0.150"
wasm-bindgen-test = "0.3.76"
