[package]
name = "healpix-geo"
version = { workspace = true }
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "healpix_geo"
crate-type = ["cdylib"]

[dependencies]
healpix-geo-core = { workspace = true }
moc = { workspace = true }
numpy = "0.29.0"
pyo3 = { version = "0.29.0", features = ["abi3-py310"] }
rayon = { workspace = true }
geodesy = { workspace = true }
cdshealpix = { workspace = true }
