[package]
name = "healpix-geo-core"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
cdshealpix = { workspace = true }
geodesy = { workspace = true }
itertools = { workspace = true }
moc = { workspace = true }
num-traits = "0.2.19"
rayon = { workspace = true }
serde = "1.0.228"
serde_json = "1.0.150"
